--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -1,6 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   background: #121212;
+  color: #fff;
+  color-scheme: dark;
   min-height: 100lvh;
 }
 
