--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -18,6 +18,10 @@ iframe {
   border: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -36,6 +40,7 @@ iframe {
     --secondary-foreground: 0 0% 9%;
 
     --muted: 0 0% 96.1%;
+    --muted-avatar: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
 
     --accent: 0 0% 96.1%;
@@ -68,6 +73,7 @@ iframe {
     --secondary-foreground: 0 0% 98%;
 
     --muted: 0 0% 14.9%;
+    --muted-avatar: 0 0% 25%;
     --muted-foreground: 0 0% 63.9%;
 
     --accent: 0 0% 14.9%;
